--- a/compose/style/less/widgets/style-toolbox.less
+++ b/compose/style/less/widgets/style-toolbox.less
@@ -16,7 +16,7 @@
         > * {margin: @small-margin 0;}
 
         .input-label, .style-tool-label {
-            width: calc(~"50% - @{margin} / 2 - @{small-margin}");
+            // width: calc(~"50% - @{margin} / 2 - @{small-margin}");
         }
 
         input {
